--- a/InsternShip.Api/Api.csproj
+++ b/InsternShip.Api/Api.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\InsternShip.Service\InsternShip.Service.csproj" />
+    <ProjectReference Include="..\InsternShip.Service\Service.csproj" />
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
