--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -20,10 +20,12 @@
 						"tsConfig": "tsconfig.app.json",
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
-							"node_modules/bootstrap/scss/bootstrap.scss",
-							"node_modules/bootstrap-icons/font/bootstrap-icons.scss",
-							"src/styles.css"
-						],
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+              "src/styles.css"
+            ],
 						"scripts": [
 							"node_modules/bootstrap/dist/js/bootstrap.min.js"
 						],
