# fix email confirm

--- a/BackEnd/Api/appsettings.json
+++ b/BackEnd/Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=DESKTOP-LNGKOTN\\DEVELOPER;Initial Catalog=RecruitmentWeb;Integrated Security=True;TrustServerCertificate=True"
-    "DefaultConnection": "Data Source=LAPTOP-1F69K9NB\\SQLEXPRESS;Initial Catalog=RecruitmentWeb;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-LNGKOTN\\DEVELOPER;Initial Catalog=RecruitmentWeb;Integrated Security=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Data Source=LAPTOP-1F69K9NB\\SQLEXPRESS;Initial Catalog=RecruitmentWeb;Integrated Security=True;TrustServerCertificate=True"
   },
   "CloudinarySettings": {
     "CloudName": "dzysxfuzi",
@@ -24,10 +24,10 @@
     "Secret": "eyJodHRwOi8vc2NoZW1hcy54bWxzb2FwLm9yZy93cy8yM"
   },
   "EmailConfiguration": {
-    "From": "hdtanh2404@gmail.com",
+    "From": "jasmineandhongphat@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "hdtanh2404@gmail.com",
-    "Password": "dcbqgzuixyvklsvk"
+    "Username": "jasmineandhongphat@gmail.com",
+    "Password": "jasminetea123"
   }
 }
