--- a/BackEnd/Api/Api.csproj
+++ b/BackEnd/Api/Api.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="7.4.0" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <PackageReference Include="MimeKit" Version="4.3.0" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
