--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -25,13 +25,12 @@
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
 							"node_modules/bootstrap/dist/css/bootstrap.min.css",
-							"@angular/material/prebuilt-themes/indigo-pink.css",
-							"node_modules/bootstrap/scss/bootstrap.scss",
-							"node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+							"node_modules/bootstrap-icons/font/bootstrap-icons.css",
 							"src/styles.css"
 						],
 						"scripts": [
-							"node_modules/bootstrap/dist/js/bootstrap.min.js"
+							"node_modules/jquery/dist/jquery.min.js",
+							"node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
 						],
 						"server": "src/main.server.ts",
 						"prerender": true,
