--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,13 +24,16 @@
     "@angular/platform-server": "^17.1.2",
     "@angular/router": "^17.1.2",
     "@angular/ssr": "^17.1.2",
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "browserslist": "^4.22.3",
+    "chart.js": "^3.1.1",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "mdb-angular-ui-kit": "^6.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
