--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -36,6 +36,7 @@
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+
             ],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -106,5 +107,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "5fe38e72-7b81-473a-922a-ba6d3e0b408f"
   }
 }
