--- a/BackEnd/Api/appsettings.json
+++ b/BackEnd/Api/appsettings.json
@@ -30,5 +30,6 @@
     "Port": 465,
     "UserName": "jasmineandhongphat@gmail.com",
     "Password": "uqzmxsuamkovlouq"
-  }
+  },
+  "TokenExpirationInHours": 1000
 }
