Revert "Merge branch 'rec-position' into FRONTEND/authen"
This reverts commit 9a575afc14b893ddf5fae4da024040628662bd48, reversing
changes made to c7d6ddda01b4f7d968104894fb4b18f03a78f1d2.

--- a/BackEnd/Api/appsettings.json
+++ b/BackEnd/Api/appsettings.json
@@ -28,8 +28,7 @@
     "From": "jasmineandhongphat@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "UserName": "jasmineandhongphat@gmail.com",
-    "Password": "uqzmxsuamkovlouq"
-  },
-  "TokenExpirationInHours": 1000
+    "Username": "jasmineandhongphat@gmail.com",
+    "Password": "jasminetea123"
+  }
 }
