--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "^17.1.2",
     "@angular/forms": "^17.1.2",
     "@angular/material": "^17.1.2",
+    "@angular/material-moment-adapter": "^17.2.1",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/platform-server": "^17.1.2",
@@ -33,6 +34,7 @@
     "chart.js": "^3.1.1",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "ngx-toastr": "^18.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
