--- a/BackEnd/Api/appsettings.json
+++ b/BackEnd/Api/appsettings.json
@@ -1,13 +1,12 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:jasminerecwebdbserver.database.windows.net,1433;Initial Catalog=RecruitmentWeb;Persist Security Info=False;User ID=jasmine;Password=bruh@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    //"DefaultConnection": "Data Source=DESKTOP-LNGKOTN\\DEVELOPER;Initial Catalog=RecruitmentWeb;Integrated Security=True;TrustServerCertificate=True"
-    //"DefaultConnection": "Data Source=LAPTOP-1F69K9NB\\SQLEXPRESS;Initial Catalog=RecruitmentWeb;Integrated Security=True;TrustServerCertificate=True"
   },
   "CloudinarySettings": {
-    "CloudName": "dzysxfuzi",
-    "ApiKey": "538219596467676",
-    "ApiSecret": "8ZbPTX7jIiqOVVDnWQmqkAYL1no"
+    "CloudName": "dso2qpvbn",
+    "ApiKey": "627592592369981",
+    "ApiSecret": "1ONiaGkfCW06Sx_Lj8In5W7m70M",
+    "ApiEnvironmentVariable": "CLOUDINARY_URL=cloudinary://627592592369981:1ONiaGkfCW06Sx_Lj8In5W7m70M@dso2qpvbn"
   },
   "Serilog": {
     "MinimumLevel": {
