--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "localstorage-polyfill": "^1.0.1",
+    "ngx-cookie-service": "^17.1.0",
     "ngx-toastr": "^18.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
