--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -30,6 +30,7 @@
     "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "@popperjs/core": "^2.11.8",
+    "@types/moment": "^2.13.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "browserslist": "^4.22.3",
@@ -38,6 +39,7 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "localstorage-polyfill": "^1.0.1",
+    "moment": "^2.30.1",
     "ngx-toastr": "^18.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
