--- a/BackEnd/Api/appsettings.json
+++ b/BackEnd/Api/appsettings.json
@@ -27,7 +27,7 @@
     "From": "jasmineandhongphat@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "jasmineandhongphat@gmail.com",
-    "Password": "jasminetea123"
+    "UserName": "jasmineandhongphat@gmail.com",
+    "Password": "uqzmxsuamkovlouq"
   }
 }
