--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -30,6 +30,7 @@
     "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "@popperjs/core": "^2.11.8",
+    "angular-jwt": "^0.1.11",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "browserslist": "^4.22.3",
@@ -37,6 +38,7 @@
     "effect": "^2.4.1",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "localstorage-polyfill": "^1.0.1",
     "ngx-cookie-service": "^17.1.0",
     "ngx-toastr": "^18.0.0",
