--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -30,8 +30,8 @@
     "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "@popperjs/core": "^2.11.8",
-    "angular-jwt": "^0.1.11",
     "@types/moment": "^2.13.0",
+    "angular-jwt": "^0.1.11",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "browserslist": "^4.22.3",
@@ -41,6 +41,7 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "localstorage-polyfill": "^1.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "ngx-cookie-service": "^17.1.0",
     "ngx-toastr": "^18.0.0",
@@ -59,6 +60,7 @@
     "@types/babel-generator": "^6.25.8",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
