--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^17.1.2",
     "@angular/compiler": "^17.1.2",
     "@angular/core": "^17.1.2",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.1.2",
     "@angular/material": "^17.1.2",
     "@angular/material-moment-adapter": "^17.2.1",
@@ -30,8 +31,8 @@
     "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "@popperjs/core": "^2.11.8",
-    "angular-jwt": "^0.1.11",
     "@types/moment": "^2.13.0",
+    "angular-jwt": "^0.1.11",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "browserslist": "^4.22.3",
