--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -44,13 +44,13 @@
 							"budgets": [
 								{
 									"type": "initial",
-									"maximumWarning": "2mb",
-									"maximumError": "5mb"
+									"maximumWarning": "5mb",
+									"maximumError": "10mb"
 								},
 								{
 									"type": "anyComponentStyle",
-									"maximumWarning": "2mb",
-									"maximumError": "5mb"
+									"maximumWarning": "5mb",
+									"maximumError": "10mb"
 								}
 							],
 							"outputHashing": "all"
@@ -87,10 +87,7 @@
 						"polyfills": ["zone.js", "zone.js/testing"],
 						"tsConfig": "tsconfig.spec.json",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": [
-							"@angular/material/prebuilt-themes/indigo-pink.css",
-							"src/styles.css"
-						],
+						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.css"],
 						"scripts": []
 					}
 				}
