--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -44,6 +44,7 @@
     "localstorage-polyfill": "^1.0.1",
     "moment": "^2.30.1",
     "ngx-cookie-service": "^17.1.0",
+    "ngx-extended-pdf-viewer": "^20.0.1",
     "ngx-toastr": "^18.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
