--- a/BackEnd/Api/Api.csproj
+++ b/BackEnd/Api/Api.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FakeItEasy" Version="7.4.0" />
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.30" />
     <PackageReference Include="MimeKit" Version="4.3.0" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="PagedList.Mvc" Version="4.5.0" />
