--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -43,6 +43,8 @@
     "jwt-decode": "^4.0.0",
     "localstorage-polyfill": "^1.0.1",
     "moment": "^2.30.1",
+    "ng2-pdf-viewer": "^10.2.2",
+    "ng2-pdfjs-viewer": "^17.0.3",
     "ngx-cookie-service": "^17.1.0",
     "ngx-extended-pdf-viewer": "^20.0.1",
     "ngx-toastr": "^18.0.0",
