--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -37,6 +37,7 @@
     "bootstrap-icons": "^1.11.3",
     "browserslist": "^4.22.3",
     "chart.js": "^3.1.1",
+    "date-fns-tz": "^3.1.3",
     "effect": "^2.4.1",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
@@ -48,6 +49,7 @@
     "ngx-cookie-service": "^17.1.0",
     "ngx-extended-pdf-viewer": "^20.0.1",
     "ngx-toastr": "^18.0.0",
+    "ngx-webcam": "^0.4.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
