--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -16,9 +16,14 @@
 						"outputPath": "dist/demo",
 						"index": "src/index.html",
 						"browser": "src/main.ts",
-						"polyfills": ["zone.js"],
+						"polyfills": [
+							"zone.js"
+						],
 						"tsConfig": "tsconfig.app.json",
-						"assets": ["src/favicon.ico", "src/assets"],
+						"assets": [
+							"src/favicon.ico",
+							"src/assets"
+						],
 						"styles": [
 							"node_modules/ngx-toastr/toastr.css",
 							"@angular/material/prebuilt-themes/indigo-pink.css",
@@ -65,6 +70,9 @@
 				},
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
+					"options": {
+						"proxyConfig": "proxy.conf.json"
+					},
 					"configurations": {
 						"production": {
 							"buildTarget": "demo:build:production"
@@ -84,10 +92,19 @@
 				"test": {
 					"builder": "@angular-devkit/build-angular:karma",
 					"options": {
-						"polyfills": ["zone.js", "zone.js/testing"],
+						"polyfills": [
+							"zone.js",
+							"zone.js/testing"
+						],
 						"tsConfig": "tsconfig.spec.json",
-						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.css"],
+						"assets": [
+							"src/favicon.ico",
+							"src/assets"
+						],
+						"styles": [
+							"@angular/material/prebuilt-themes/indigo-pink.css",
+							"src/styles.css"
+						],
 						"scripts": []
 					}
 				}
