--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -33,6 +33,7 @@
     "@popperjs/core": "^2.11.8",
     "@types/moment": "^2.13.0",
     "angular-jwt": "^0.1.11",
+    "angular-oauth2-oidc": "^17.0.2",
     "angularx-qrcode": "^17.0.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
