--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -16,9 +16,7 @@
 						"outputPath": "dist/demo",
 						"index": "src/index.html",
 						"browser": "src/main.ts",
-						"polyfills": [
-							"zone.js"
-						],
+						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
 						"assets": [
 							"src/favicon.ico",
@@ -34,6 +32,7 @@
 							"@angular/material/prebuilt-themes/indigo-pink.css",
 							"node_modules/bootstrap/dist/css/bootstrap.min.css",
 							"node_modules/bootstrap-icons/font/bootstrap-icons.css",
+							"node_modules/katex/dist/katex.min.css",
 							"src/styles.css"
 						],
 						"scripts": [
@@ -41,7 +40,8 @@
 							"node_modules/popper.js/dist/umd/popper.min.js",
 							"node_modules/bootstrap/dist/js/bootstrap.min.js",
 							"node_modules/jquery/dist/jquery.min.js",
-							"node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+							"node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+							"node_modules/plotly.js/dist/plotly.min.js"
 						],
 						"server": "src/main.server.ts",
 						"prerender": true,
@@ -101,20 +101,10 @@
 				"test": {
 					"builder": "@angular-devkit/build-angular:karma",
 					"options": {
-						"polyfills": [
-							"zone.js",
-							"zone.js/testing"
-						],
+						"polyfills": ["zone.js", "zone.js/testing"],
 						"tsConfig": "tsconfig.spec.json",
-						"assets": [
-							"src/favicon.ico",
-							"src/assets",
-							"silent-refresh.html"
-						],
-						"styles": [
-							"@angular/material/prebuilt-themes/indigo-pink.css",
-							"src/styles.css"
-						],
+						"assets": ["src/favicon.ico", "src/assets", "silent-refresh.html"],
+						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.css"],
 						"scripts": []
 					}
 				}
