--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -34,6 +34,7 @@
     "@types/moment": "^2.13.0",
     "angular-jwt": "^0.1.11",
     "angular-oauth2-oidc": "^17.0.2",
+    "angular-plotly.js": "^5.2.2",
     "angularx-qrcode": "^17.0.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
@@ -44,14 +45,18 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "katex": "^0.16.11",
     "localstorage-polyfill": "^1.0.1",
     "moment": "^2.30.1",
+    "ng-katex": "^2.0.3",
     "ng2-pdf-viewer": "^10.2.2",
     "ng2-pdfjs-viewer": "^17.0.3",
     "ngx-cookie-service": "^17.1.0",
     "ngx-extended-pdf-viewer": "^20.0.1",
+    "ngx-quill": "^25.3.2",
     "ngx-toastr": "^18.0.0",
     "ngx-webcam": "^0.4.1",
+    "plotly.js": "^2.33.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -67,6 +72,7 @@
     "@types/babel-generator": "^6.25.8",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/katex": "^0.16.7",
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
