--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -58,6 +58,7 @@
     "ngx-webcam": "^0.4.1",
     "plotly.js": "^2.33.0",
     "popper.js": "^1.16.1",
+    "quill": "^2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
