--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -75,6 +75,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/katex": "^0.16.7",
     "@types/node": "^18.18.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
